Fixed weird/ugly overflow values in other browsers

--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,6 @@ body {
    font-size: medium;
    color: 	#9370DB;
    overflow: scroll;
-   overflow-y: hidden;
    overflow-x: hidden;
 }
 
